--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,16 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<title>First Simulation</title>
+	</head>
+	<body>
+		<div class="pink">top</div>
+		<div class = "blue2">right</div>
+		<div class = "blue1">left</div>
+		<div class = "yellow">middle</div>
+		<div class = "green">bottom</div>
+	</body>
+</html>
